# AtomicGameEngine

./: .gitignore  .gitmodules  Build_Scripts.bat  CMakeLists.txt  CMake_VS.bat  README.md
Data/AtomicEditor/ProjectTemplates/Project3D/Cpp/: Game.cpp  Game.h
Data/AtomicEditor/ProjectTemplates/Project3D/Cpp/Source/: Character.cpp  Character.h  CharacterDemo.cpp  CharacterDemo.h  Game.cpp  Game.h
Resources/EditorData/AtomicEditor/eulas/: atomic_game_engine_eula.txt
Script/AtomicEditor/resources/: ProjectTemplates.ts
Script/AtomicEditor/ui/modal/: CreateProject.ts
Script/AtomicNET/AtomicNET/Application/: AppDelegate.cs
Source/: CMakeLists.txt
Source/Atomic/: CMakeLists.txt  CMakeLists.txt.in
Source/Atomic/Engine/: Engine.cpp
Source/Atomic/Graphics/: View.cpp
Source/Atomic/Input/: Input.cpp  Input.h
Source/Atomic/UI/SystemUI/: SystemUI.cpp
Source/AtomicApp/Player/: PlayerApp.cpp
Source/AtomicEditor/Application/: AEEditorApp.cpp  Main.cpp
Source/AtomicEditor/EditorMode/: AEEditorMode.cpp
Source/AtomicEditor/Editors/SceneEditor3D/: SceneView3D.cpp
Source/AtomicTool/: CMakeLists.txt
Source/ToolCore/Assets/: Asset.cpp  JSONImporter.cpp
Source/ToolCore/Command/: BindCmd.cpp
Source/ToolCore/NETTools/: NETBuildSystem.cpp  NETProjectSystem.cpp
