option(ATOMIC_DATABASE_SQLITE "Enable SQLite database subsystem" OFF)
option(ATOMIC_DATABASE_ODBC "Enable ODBC database subsystem" OFF)
option(ATOMIC_IK "Enable inverse kinematics subsystem" OFF)
option(ATOMIC_PROFILING "Enable profiler" OFF)
#option(ATOMIC_PROFILING "Enable profiler" ${ATOMIC_RELEASE_OFF})

if (WIN32)
    option (ATOMIC_D3D9 "Use DirectX 9" OFF)
    option (ATOMIC_OPENGL "Use OpenGL" OFF)
    if (NOT ATOMIC_D3D9 AND NOT ATOMIC_OPENGL)
        set (ATOMIC_D3D11 ON)
    endif ()
endif ()

if (ATOMIC_OPENGL)
    message(STATUS "Renderer: OpenGL")
elseif (ATOMIC_D3D11)
    message(STATUS "Renderer: D3D11")
elseif (ATOMIC_D3D9)
    message(STATUS "Renderer: D3D9")
endif ()

add_subdirectory(ThirdParty)
add_subdirectory(Atomic)

if (ATOMIC_DESKTOP)
    add_subdirectory(Tools)
    add_subdirectory(ToolCore)
endif ()

include(AtomicDocList)
